--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,9 @@ flask-wtf
 gunicorn
 flask-cors
 
+Flask==2.0.2
+Flask-SocketIO==5.1.1
+eventlet==0.33.0  # For asynchronous support with WebSocket
 
 bidict==0.23.1
     # via python-socketio
