--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,9 @@ python-engineio
 flask-wtf
 gunicorn
 flask-cors
-Flask-SocketIO==5.2.0
-Flask-WTF==1.0.0
-python-socketio==5.5.0
-Flask-Cors==3.0.10
 
+Flask==2.0.2
+Flask-SocketIO==5.1.1
 eventlet==0.33.0  # For asynchronous support with WebSocket
 
 bidict==0.23.1
