--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile --strip-extras /home/miguel/Documents/dev/microblog/flask-socketio-chat/pyproject.toml
 #
-flask-socketio
+python-socketio
 python-engineio
 flask-wtf
 gunicorn
